<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".VerbListFragment">

    <!-- Titre de l'écran -->
<TextView
android:id="@+id/textview_verb_list_title"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:text="@string/verb_list_title"
android:textSize="20sp"
android:textStyle="bold"
android:textAlignment="center"
android:layout_marginBottom="16dp"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent" />

    <!-- Guideline pour séparer les boutons horizontalement -->
<androidx.constraintlayout.widget.Guideline
android:id="@+id/guideline_buttons_vertical_center"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="vertical"
app:layout_constraintGuide_percent="0.5" />

    <!-- Bouton Ajouter Verbe -->
    <Button
        android:id="@+id/button_add_verb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_add_verb_text"
        app:layout_constraintEnd_toStartOf="@id/guideline_buttons_vertical_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_verb_list_title" />

    <!-- Bouton Réinitialiser Liste -->
<Button
android:id="@+id/button_reset_verb_list"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:text="@string/button_reset_list_text"
android:layout_marginStart="8dp"
    android:layout_marginEnd="0dp"
    app:layout_constraintTop_toTopOf="@id/button_add_verb"
    app:layout_constraintStart_toEndOf="@id/guideline_buttons_vertical_center"
    app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView pour afficher la liste des verbes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_verbs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/button_verb_list_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add_verb"
        tools:listitem="@layout/list_item_verb" />

    <!-- Bouton Retour en bas -->
<Button
android:id="@+id/button_verb_list_back"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/button_back_to_home"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>